force-app/main/default/objects/netsuite_conn__Celigo_Item_Fulfillment__c/netsuite_conn__Celigo_Item_Fulfillment__c.object-meta.xml
<CustomObject>
    <label>Item Fulfillment</label>
    <nameField>
        <label>Item Fulfillment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>