force-app/main/default/objects/netsuite_conn__Celigo_Item_Fulfillment__c/fields/netsuite_conn__Account__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Item Fulfillments</relationshipLabel>
    <relationshipName>Item_Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>