force-app/main/default/objects/netsuite_conn__Celigo_Item_Fulfillment__c/fields/netsuite_conn__Handling_Cost__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Handling_Cost__c</fullName>
    <label>Handling Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>