force-app/main/default/objects/netsuite_conn__Celigo_Item_Fulfillment__c/fields/netsuite_conn__Status__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Picked</fullName>
            </value>
            <value>
                <fullName>Packed</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>